# dlm-analyzer

./: AUTHORS  Makefile.am  README  README.ja  TODO  configure.ac
scripts/: Makefile.am  build_analysis_sheet.py  cat_nbests_scores.py  dirichlet-topic-error-analysis.py  generate_sheet_seed.py  revert_ordering.py  view_mark_statistics.py  view_model_statistics.py
src/: DiscerTester.cc  DiscerTester.h  DiscerTrainer.cc  DiscerTrainer.h  DiscrimTester.cc  DiscrimTester.h  DiscrimTrainer.cc  DiscrimTrainer.h  Makefile  Makefile.am  Makefile.in  Model.cc  Model.h  Utils.cc  Utils.h  common.h  dlm_train  main.cc
test/: Makefile.am  modeldata.test  test_testset.txt  test_trainset.txt  testall.cc
